modified:   index.html 	modified:   script.js

--- a/index.html
+++ b/index.html
@@ -46,78 +46,77 @@
 </head>
 
 <body>
-    <!-- partial:index.partial.html -->
     <html>
 </body>
-<script src="./script.js"></script>
-<div id="overlay-me">
-    <div id="close-button" onclick="closeOverlayThizh()">X</div>
-    <div id="overlay-content">
+    <div id="overlay-me">
+        <div id="close-button" onclick="closeOverlayThizh()">X</div>
+        <div id="overlay-content">
 
-        <p class="paragraphs"><span class="greet">Greetings!</span> I am a passionate and dedicated software
-            engineering undergraduate at the prestigious Open University of Sri Lanka. My journey into the world of
-            technology and programming has been a thrilling adventure.</p><br /><br />
+            <p class="paragraphs"><span class="greet">Greetings!</span> I am a passionate and dedicated software
+                engineering undergraduate at the prestigious Open University of Sri Lanka. My journey into the world of
+                technology and programming has been a thrilling adventure.</p><br /><br />
 
-        <p class="paragraphs">As a student with a relentless curiosity and a hunger for knowledge, I've immersed
-            myself in the ever-evolving field of programming. Through my academic pursuits and personal projects,
-            I've honed my skills and embraced the art of problem-solving. My journey is fueled by a desire to create
-            innovative solutions and to explore the limitless possibilities of code.</p><br /><br />
+            <p class="paragraphs">As a student with a relentless curiosity and a hunger for knowledge, I've immersed
+                myself in the ever-evolving field of programming. Through my academic pursuits and personal projects,
+                I've honed my skills and embraced the art of problem-solving. My journey is fueled by a desire to create
+                innovative solutions and to explore the limitless possibilities of code.</p><br /><br />
 
-        <p class="paragraphs">My commitment to excellence is reflected in my dedication to mastering various
-            programming languages, software development methodologies, and emerging technologies. I relish the
-            challenges that programming presents and thrive in the pursuit of elegant, efficient, and creative
-            solutions.</p><br /><br />
-    </div>
-</div>
-<div>
-    <iframe id="overlay-cv" src="https://drive.google.com/file/d/1yQf6nd9f4X5jJhW8ZDIYBy9-Fl4wko1s/preview"></iframe>
-
-    <div class="wrapper">
-        <div class="navbar">
-            <nav>
-                <ul>
-                    <li><a href="https://linktr.ee/thizh" style="cursor: pointer;" id="resume">linktree</a></li>
-                    <li onclick="showOverlayCV()" style="cursor: pointer;" id="resume">résumé</a></li>
-                </ul>
-            </nav>
+            <p class="paragraphs">My commitment to excellence is reflected in my dedication to mastering various
+                programming languages, software development methodologies, and emerging technologies. I relish the
+                challenges that programming presents and thrive in the pursuit of elegant, efficient, and creative
+                solutions.</p><br /><br />
         </div>
-        <div class="row">
-            <div class="col">
-                <h1 class="name">Thisitha Wickramaarachchi</h1>
-                <p style="font-size: 20px;">AKA <span style="font-family: 'Gluten'; font-size: 30px;"
-                        class="font-effect-fire-animation">Thizh Wick</span></p>
-                <div style="flex-direction: row;">
-                    <button type="button" onclick="showOverlayThizh()" class="thizh">Who Tf is Thizh?</button>
-                    <a href="https://drive.google.com/file/d/1Zhcyj0M42vsc0MhQwhctcfrPAKqKMahH/preview"><button
-                            type="button" class="resume-btn">résumé</button></a>
-                </div>
+    </div>
+    <div>
+        <iframe id="overlay-cv"
+            src="https://drive.google.com/file/d/1yQf6nd9f4X5jJhW8ZDIYBy9-Fl4wko1s/preview"></iframe>
+
+        <div class="wrapper">
+            <div class="navbar">
+                <nav>
+                    <ul>
+                        <li><a href="https://linktr.ee/thizh" style="cursor: pointer;" id="resume">linktree</a></li>
+                        <li onclick="showOverlayCV()" style="cursor: pointer;" id="resume">résumé</a></li>
+                    </ul>
+                </nav>
             </div>
-            <div class="col">
-                <div class="container">
-                    <div class="hero-circle">
-                        <div class="hero-rotate" id="circle">
-                            <div class="social">
-                                <a href="https://github.com/Thizh" aria-label="my github"><img src="./assets/github.png"
-                                        alt="my github" /></a>
-                            </div>
-                            <div class="social">
-                                <a href="https://discordapp.com/users/926325270133227600" aria-label="my discord"><img
-                                        src="./assets/discord.png" alt="my discord" /></a>
-                            </div>
-                            <div class="social">
-                                <a href="https://www.linkedin.com/in/thizh" aria-label="my linkedin"><img
-                                        src="./assets/linkedin.png" alt="my linkedin" /></a>
-                            </div>
-                            <div class="social">
-                                <a href="mailto:thizhwick@gmail.com" aria-label="my mail"><img src="./assets/gmail.png"
-                                        alt="my mail" /></a>
+            <div class="row">
+                <div class="col">
+                    <h1 class="name">Thisitha Wickramaarachchi</h1>
+                    <p style="font-size: 20px;">AKA <span style="font-family: 'Gluten'; font-size: 30px;"
+                            class="font-effect-fire-animation">Thizh Wick</span></p>
+                    <div style="flex-direction: row;">
+                        <button type="button" onclick="showOverlayThizh()" class="thizh">Who Tf is Thizh?</button>
+                        <a href="https://drive.google.com/file/d/1Zhcyj0M42vsc0MhQwhctcfrPAKqKMahH/preview"><button
+                                type="button" class="resume-btn">résumé</button></a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="container">
+                        <div class="hero-circle">
+                            <div class="hero-rotate" id="circle">
+                                <div class="social">
+                                    <a href="https://github.com/Thizh" aria-label="my github"><img
+                                            src="./assets/github.png" alt="my github" /></a>
+                                </div>
+                                <div class="social">
+                                    <a href="https://discordapp.com/users/926325270133227600"
+                                        aria-label="my discord"><img src="./assets/discord.png" alt="my discord" /></a>
+                                </div>
+                                <div class="social">
+                                    <a href="https://www.linkedin.com/in/thizh" aria-label="my linkedin"><img
+                                            src="./assets/linkedin.png" alt="my linkedin" /></a>
+                                </div>
+                                <div class="social">
+                                    <a href="mailto:thizhwick@gmail.com" aria-label="my mail"><img
+                                            src="./assets/gmail.png" alt="my mail" /></a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
     <canvas></canvas>
     </body>
 
