--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/x-icon" href="/assets/T.ico">
     <meta property="og:title" content="Thisitha Wickramarachchi" />
     <meta property="og:description" content="An undergraduate student who wants to become better Software Engineer" />
-    <title>ThIzH WiCk</title>
+    <title>Thisitha Wickramarachchi | Thizh Wick</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gluten&effect=fire-animation">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/mouse2.css">
