modified:   index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./styles/desktop-styles.css">
     <script>
         function isDesktopMode() {
-            return window.innerWidth > 767; // Adjust the threshold as needed
+            return window.innerWidth > 767;
         }
 
         function showOverlayThizh() {
@@ -135,61 +135,8 @@
                 solutions.</p><br /><br />
         </div>
     </div>
-<<<<<<< HEAD
     <iframe id="overlay-cv" src="https://drive.google.com/file/d/1yQf6nd9f4X5jJhW8ZDIYBy9-Fl4wko1s/preview">
     </iframe>
-=======
-    <div>
-        <iframe id="overlay-cv"
-            src="https://drive.google.com/file/d/1yQf6nd9f4X5jJhW8ZDIYBy9-Fl4wko1s/preview"></iframe>
-
-        <div class="wrapper">
-            <div class="navbar">
-                <nav>
-                    <ul>
-                        <li><a href="https://linktr.ee/thizh" target="_blank" style="cursor: pointer;" id="resume">linktree</a></li>
-                        <li onclick="showOverlayCV()" style="cursor: pointer;" id="resume">résumé</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <h1 class="name">Thisitha Wickramaarachchi</h1>
-                    <p style="font-size: 20px;">AKA <span style="font-family: 'Gluten'; font-size: 30px;"
-                            class="font-effect-fire-animation">Thizh Wick</span></p>
-                    <div style="flex-direction: row;">
-                        <button type="button" onclick="showOverlayThizh()" class="thizh">Who Tf is Thizh?</button>
-                        <a href="https://drive.google.com/file/d/1FutlUlp3fOrfhY9E91h1w-aCp9MPJBqg/preview"><button
-                                type="button" class="resume-btn">résumé</button></a>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="container">
-                        <div class="hero-circle">
-                            <div class="hero-rotate" id="circle">
-                                <div class="social">
-                                    <a href="https://github.com/Thizh" aria-label="my github"><img
-                                            src="./assets/github.png" alt="my github" /></a>
-                                </div>
-                                <div class="social">
-                                    <a href="https://discordapp.com/users/926325270133227600"
-                                        aria-label="my discord"><img src="./assets/discord.png" alt="my discord" /></a>
-                                </div>
-                                <div class="social">
-                                    <a href="https://www.linkedin.com/in/thizh" aria-label="my linkedin"><img
-                                            src="./assets/linkedin.png" alt="my linkedin" /></a>
-                                </div>
-                                <div class="social">
-                                    <a href="mailto:thizhwick@gmail.com" aria-label="my mail"><img
-                                            src="./assets/gmail.png" alt="my mail" /></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
->>>>>>> de7ab87e24b5d62708dcdc706d42534f24faf406
     <canvas></canvas>
     </body>
 
