modified:   index.html

--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
                         class="font-effect-fire-animation">Thizh Wick</span></p>
                 <div style="flex-direction: row;">
                     <button type="button" onclick="showOverlayThizh()" class="thizh">Who Tf is Thizh?</button>
-                    <a href="https://drive.google.com/file/d/1Zhcyj0M42vsc0MhQwhctcfrPAKqKMahH/preview"><button
-                            type="button" class="resume-btn">résumé</button></a>
+                    <button type="button" class="resume-btn">résumé</button></a>
                 </div>
             </div>
             <div class="col">
