modified:   index.html 	modified:   styles/desktop-styles.css 	modified:   styles/mobile-styles.css

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
             </div>
         </div>
     </div>
+    <h1 id="topic1">Who Am I?</h1>
     <div id="overlay-me">
         <div id="close-button" onclick="closeOverlayThizh()">X</div>
         <div id="overlay-content">
@@ -134,6 +135,7 @@
                 solutions.</p><br /><br />
         </div>
     </div>
+    <h1 id="topic1">résumé?</h1>
     <iframe id="overlay-cv" src="https://drive.google.com/file/d/1yQf6nd9f4X5jJhW8ZDIYBy9-Fl4wko1s/preview">
     </iframe>
     <canvas></canvas>
